--- a/article.css
+++ b/article.css
@@ -1,3 +1,26 @@
-body {
-    background-color: aqua;
+header {
+    background-color: rgb(154, 218, 154);
+    display: flex;
+    justify-content: space-between;    
+}
+
+.header-buttons{
+    display:flex;
+    border: 1px red solid;
+}
+
+.main-content {
+    border: 3px yellow solid;
+    background-color: rgb(192, 127, 127);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    
+}
+
+.main-content p {
+    border: 1px blue solid;
+    min-width: 200px;
+    max-width: 650px;
 }
