--- a/article.css
+++ b/article.css
@@ -21,6 +21,27 @@ iframe {
     max-width: 650px;
 }
 
+/* ARTICLE INFOGRAPHIC */
+
+.article-infographic {
+    border: 3px hotpink solid;
+    /* position: absolute;
+    height: 500px;
+    margin-left: -200px;
+    width: 80%; */
+}
+
+#divider {
+    margin-top: 500px;
+}
+
+article {
+    border: 2px black solid;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+}
+
 /* HEADER STYLING */
 
 header {
@@ -64,16 +85,25 @@ header {
     
 }
 
-.main-content p {
+.article-section p {
     border: 1px blue solid;
     min-width: 200px;
     max-width: 650px;
 }
 
+/* .article-section {
+    display: flex;
+     */
+
+/* 
+____________________ */
+
 .end-tag{
     border: 1px purple solid;
     /* display: flex; */
 }
+
+/* mini aside */
 
 .mini-aside {
     border: 1px yellow solid;
