--- a/article.css
+++ b/article.css
@@ -21,26 +21,6 @@ iframe {
     max-width: 650px;
 }
 
-/* ARTICLE INFOGRAPHIC */
-
-.article-infographic {
-    border: 3px hotpink solid;
-    /* position: absolute;
-    height: 500px;
-    margin-left: -200px;
-    width: 80%; */
-}
-
-#divider {
-    margin-top: 500px;
-}
-
-article {
-    border: 2px black solid;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-}
 
 /* HEADER STYLING */
 
@@ -85,23 +65,81 @@ header {
     
 }
 
-.article-section p {
+
+article {
+    border: 2px black solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 80%;
+}
+
+.article-credits {
+    border: 1px pink solid;
+    width: 650px;
+}
+
+.article-section {
     border: 1px blue solid;
     min-width: 200px;
     max-width: 650px;
 }
 
-/* .article-section {
-    display: flex;
-     */
+/* ARTICLE INFOGRAPHIC */
 
-/* 
-____________________ */
+.article-infographic {
+    border: 3px hotpink solid;
+    max-width: 75%; 
+    min-height: 700px;
+    /* same width as article */
+}
+
+.infographic-grid {
+    position: relative;
+}
+
+.infographic-grid img {
+    width: 100%;
+    min-width: 1000px;
+}
+
+.infographic-grid p{
+    position: absolute;
+    max-width: 25%;
+    font-size: 15px;
+}
+
+.row1 {top: 25%; padding: 5px}
+
+#para-1{left: 0%}
+#para-2{left: 25%}
+#para-3{left: 50%}
+#para-4{left: 75%}
+
+.row2 {bottom: 0%}
+
+#para-5{left: 0%}
+#para-6{left: 25%}
+#para-7{left: 50%}
+#para-8{left: 75%}
+
+
+/* ____________________ */ 
 
 .end-tag{
-    border: 1px purple solid;
-    /* display: flex; */
+    border: 2px purple solid;
 }
+
+.end-tag p {
+    border: 1px red solid;
+    min-width: 600px;
+}
+
+.end-tag-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
 
 /* mini aside */
 
