added more css ststyling

--- a/article.css
+++ b/article.css
@@ -3,10 +3,15 @@ body {
     padding: 0;
 }
 
+a {text-decoration: none;}
+
+.nyt-font{
+    font-family: "Rye";
+    font-weight: 200;
+}
 
 /* MEDIA */
 .title-img {
-    border: 2px blue solid;
     max-height: 70%;
     max-width: 70%;
 }
@@ -15,9 +20,15 @@ iframe {
     min-width: 100%;
 }
 
+#video-caption, #img-caption {
+    font-size: 15px;
+    color: rgb(80, 80, 80);
+}
+
 .title-img img {max-width: 100%}
 
 .title-img p {
+    color: rgb(77, 77, 77);
     max-width: 100%;
 }
 
@@ -30,16 +41,29 @@ iframe {
 /* HEADER STYLING */
 
 header {
-    background-color: rgb(154, 218, 154);
     display: flex;
+    position: fixed;
+    min-width: 100%;
     justify-content: space-between;
-    align-items: center;   
+    align-items: center;
+    background-color: white;
+    box-shadow: 1px 2px 4px #797777;
+    z-index: 1;
 }
 
-.header-buttons{
-    display:flex;
-    border: 1px red solid;
-    
+header h1 {
+    font-size: 20px;
+    /* padding: 0; */
+}
+
+.header-buttons button{
+    height: 35px;
+    background-color: rgb(74, 115, 133);
+    color: white;
+    margin: 3px 5px 3px 5px;
+    /* padding: 2px 2px 2px 2px; */
+    border: none;
+    border-radius: 4px;
 }
 
 header div {
@@ -56,8 +80,11 @@ header img {
 
 /* title container */
 .title-container{
-    border: 2px blue solid;
     padding: 10px 20px 10px 20px;
+}
+
+.title-container h1 {
+    font-family: -apple-system-body;
 }
 
 .title-container hr {
@@ -66,26 +93,19 @@ header img {
 
 .title-container img {
     width: 300px;
-    /* width: 65%;
-    height: 65%; */
 }
-
 
 /* main content */
 
 .main-content {
-    border: 3px yellow solid;
-    background-color: rgb(192, 127, 127);
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    
 }
 
 
 article {
-    border: 2px black solid;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,20 +113,28 @@ article {
 }
 
 .article-credits {
-    border: 1px pink solid;
     width: 650px;
 }
 
+.article-credits p {
+    font-size: 14px;
+    font-family: helvetica;
+}
+
 .article-section {
-    border: 1px blue solid;
     min-width: 200px;
     max-width: 650px;
+}
+
+.article-section p{
+    font-size: 20px;
+    font-family: georgia,'times new roman',times,serif;
+    color: rgb(29, 29, 29);
 }
 
 /* ARTICLE INFOGRAPHIC */
 
 .article-infographic {
-    border: 3px hotpink solid;
     max-width: 75%; 
     min-height: 700px;
     /* same width as article */
@@ -127,13 +155,13 @@ article {
     font-size: 15px;
 }
 
-.row1 {top: 25%; padding: 5px}
+.row1 {top: 25%;}
 #para-1{left: 0%}
 #para-2{left: 25%}
 #para-3{left: 50%}
 #para-4{left: 75%}
 
-.row2 {bottom: 0%}
+.row2 {top: 75%}
 #para-5{left: 0%}
 #para-6{left: 25%}
 #para-7{left: 50%}
@@ -142,52 +170,74 @@ article {
 
 /* ____________________ */ 
 
-.end-tag{
-    border: 2px purple solid;
-}
+/* .end-tag{
+    /* border: 2px purple solid; */
 
 .end-tag p {
-    border: 1px red solid;
+    font-size: 11px;
+    color: rgb(66, 66, 66);
+    font-family: helvetica;
     min-width: 600px;
 }
 
 .end-tag-buttons {
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
+}
+
+.end-tag-buttons button{
+    background-color: rgb(74, 115, 133);
+    color: white;
+    border: none;
+    min-width: 55%;
+    font-weight: 600;
+    border-radius: 5px;
 }
 
 
 /* mini aside */
 
-.mini-aside {
-    border: 1px yellow solid;
-}
 
 /* main aside */
 
 .main-aside {
-    border: 3px orange solid;
     display: flex;
     margin: 5% 5% 5% 5%;
 }
 
 .related-posts {
-    border: 4px blue solid;
     display: grid;
-    grid-template-rows: 1fr 1.5fr 1fr;
+    grid-template-rows: 1fr 1.6fr 1fr;
 }
 
 .related-post-container {
     /* HEADLINE AND IMGS */
-    border: 3px purple dotted;
+    border-top: 1px black solid;
     display: flex;
     flex-direction: column;
+    
+}
+
+.related-post-container .section-title,
+.most-popular-section .section-title {
+    font-size: 16px;
+    
+}
+
+.section-title {
+    font-family: helvetica;
+    color: rgb(31, 31, 31);
 }
 
 .related-post-imgs {
-    border: 2px green solid;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 12px;
+}
+
+.related-post-imgs > div {
+    max-width: 270px;
 }
 
 .related-post-imgs img {
@@ -195,39 +245,100 @@ article {
     max-height: 250px;
 }
 
-/* .related-post-imgs div {
-    border: 2px grey solid;
-    margin-left: 10px;
-    
-} */
+#suggested-imgs > div {
+    border: 1px rgb(216, 216, 216) solid;
+    padding: 10px 10px 10px 10px;
+    position: relative;
+    min-height: 280px;
+}
+
+#suggested-imgs > div:hover{
+    box-shadow: 1px 1px 4px rgb(167, 167, 167);
+}
+
+/* #suggested-imgs .text-container {
+    /* border: 2px pink solid; */
 
 
+.text-container p {margin: 3px;}
+.text-container p:nth-child(1){
+    font-size: 11px; color: rgb(58, 58, 58);
+}
+.text-container p:nth-child(2){
+    font-size: 16px;
+    font-weight: 600;
+}
+.text-container p:nth-child(3){
+    font-size: 16px;
+}
+
+#suggested-imgs .text{
+    font-family: arial;
+}
+
+#suggested-imgs a{
+    position: absolute;
+    bottom: 10px;
+    color: rgb(74, 115, 133);
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.font-style-1 {
+    font-family: georgia, "times new roman";
+    font-weight: 500;
+    color: rgb(26, 26, 26);
+}
+
+.font-style-2 {
+    font-family: arial;
+    font-size: 12px;
+    color: rgb(85, 85, 85);
+}
+
+/* suggested posts header */
 
 .related-post-container .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
+#dont-show-link{
+    height: fit-content;
+    font-size: 15px;
+    color: rgb(53, 53, 53);
+}
 
 /* MOST POPULAR SECTION */
 
 .most-popular-section{
-    background-color: yellow;
-    border: 2px purple dashed;
+    border-top: 1px black solid;
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
     height: fit-content;
     font-size: 21px;
+    min-width: 300px;
+}
+
+.most-popular-section .section-title {
+    margin-bottom: 15px;
 }
 
 .most-popular-section a {
     padding-top: 1em;
-}
-/* 
-.most-popular-section hr{
+    padding-bottom: 0.5em;
+    text-decoration: none;
     color: black;
-} */
+    font-size: 18px;
+    font-family: georgia, "times new roman";
+    border-top: 1px rgb(216, 216, 216) solid;
+}
 
+.most-popular-section a:hover {
+    color: grey;
+}
 
 
 /*
@@ -237,59 +348,131 @@ article {
 /* end section & links */
 
 .end-section {
-    border: 3px pink solid;
     margin-left: 5%;
     margin-right: 5%;
 }
 
 .end-section .header {
-    border: 1px blue solid;
+    border-top: 1px rgb(216, 216, 216) solid;
     display: flex;
     justify-content: space-between;
 }
 
+.end-section .header h2 {
+    font-size: 18px;
+}
+
 #home-page-link {
-    border: 1px black solid;
+    font-size: 12px;
+    color: rgb(0, 73, 116);
     display:flex;
     align-items: center;
 }
 
 .end-section .links {
-    border: 3px red solid;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    /* justify-items: end;  */
 }
 .end-section .links section {
-    border: 1px blue dashed;
     min-width: 170px;
 }
 
 .subscribe, .versions{
     display: flex;
     flex-direction: column;
+    padding: 5px 5px 5px 5px;
 }
 
-.links-1 {
+.links .section-title,
+.subscribe h3 {
     font-size: 14px;
-    border: 1px pink dashed;
+}
+
+.end-links {
+    font-size: 14px;
     display: flex;
     flex-direction: column;
 }
 
+.end-links a {
+    color: black;
+    font-family: arial;
+    font-size: 13px;
+    margin: 3px 0 5px 0;
+}
 
+.end-links a:hover{
+    text-decoration-line: underline;
+}
+
+
+.subscribe {
+    border-left: 1px rgb(216, 216, 216) solid;
+    padding-left: 15px;
+    
+}
+
+.subscribe h3 {
+    margin-top: 8px;
+    margin-bottom: 0;
+}
+
+.subscribe a {
+    color: black;
+}
+
+.bold-links {
+    display: flex;
+    flex-direction: column;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.bold-links a{
+    margin: 10px 0 10px 0;
+}
+
+.other-links {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.other-links a {
+    margin: 3px 0 5px 0;
+}
+
+.versions a {
+    color: black;
+    margin: 3px 0 5px 0;
+}
+
+.versions {
+    border-left: 1px rgb(216, 216, 216) solid;
+    border-top: 1px rgb(216, 216, 216) solid;
+    padding-left: 15px;
+}
+
+.font-style-3{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 13px;
+}
 
 /* footer */
 
 footer {
-    border: 3px green solid;
+    border-top: 1px rgb(216, 216, 216) solid;
     display: flex;
     justify-content: center;
     align-content: center;
     margin-bottom: 20px;
+    width:fit-content;
+    margin: 0 auto;
+    padding: 10px 0 40px 0;
 }
 
 footer a {
-    font-size: 13px;
+    font-size: 12px;
     margin-left: 10px;
+    color:rgb(68, 68, 68);
 }
